# soulcatcher

./: Makefile.in  README.md  SST.h  base.cpp  base.h  checks.cpp  checks.h  config.h  config.h.in  configure.in  fileio.cpp  fileio.h  global.h  main.cpp  serrors.h  soul.cpp  soul.default.conf  soul.h  souldb.cpp  souldb.h  stats.cpp  stats.h  sub_acl.cpp  sub_acl.h  todo
