#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.57)
AC_INIT(SOULCATCHER, 0.3.0, hubnerd@btinternet.com)
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([soul.cpp])
AM_CONFIG_HEADER([config.h])

AC_PREFIX_DEFAULT([/usr/soul])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_INSTALL

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([unistd.h])
AC_ISC_POSIX

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST

# Checks for library functions.
AC_FUNC_CHOWN
AC_TYPE_SIGNAL
AC_CHECK_FUNCS([memset strrchr])

AC_ARG_ENABLE([name-check],
 [  --disable-name-check    Disables checking of files to see if they belong to the current user ],[

	if test "$enableval" = "no"; then
		AC_DEFINE(NAME_CHECK,,[Do name check?])
	fi

] )

#default - berk
database_type=1

AC_ARG_ENABLE([database-type], [  --enable-database-type[=type] 
			  berk {default}: Berkeley Database ],[			

if test "$enableval" = "berk"; then 
	database_type=1

 else
	echo "$enableval"
	echo "Error! Unknown database type"
	exit -1
fi

])

if test "$database_type" = "1"; then 

AC_CHECK_LIB([db], [db_version],,[echo ""
				 echo "You need the Berkley DB Libs, you" 
				 echo "can get them from http://www.sleepycat.com"
				 echo "" 
				 ])

fi

AC_DEFINE_UNQUOTED(DATABASE_TYPE,$database_type,[Type of Database for soulcatcher to use])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
